--- a/style.css
+++ b/style.css
@@ -23,7 +23,18 @@ body{
     font-family: arial; font-size: 80%; line-height: 1.2em; width: 100%; margin: 0; background: #eee;
 
    background-color: blue;
+
 }
+
+.content {
+    max-width: 500px;
+    margin: auto;
+    background: white;
+    padding: 10px;
+
+    }
+
+    
 /* you can put your code all in one line like above */
 #page{ margin: 20px; }
 
