--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a{
 body{
     font-family: arial; font-size: 80%; line-height: 1.2em; width: 100%; margin: 0; background: #eee;
 
-   background-color: blue;
+   background-color: black;
 
 }
 
@@ -34,7 +34,7 @@ body{
 
     }
 
-    
+
 /* you can put your code all in one line like above */
 #page{ margin: 20px; }
 
