--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ a{
 
 body{
     font-family: arial; font-size: 80%; line-height: 1.2em; width: 100%; margin: 0; background: #eee;
-
-   background-color: black;
+/*
+   background-color: black;*/
 
 }
 
