--- a/style.css
+++ b/style.css
@@ -62,12 +62,13 @@ body{
 			}
 			#nav ul li a:active{ background-color: #ff8f00; }
 
-#content{
-	margin: 30px 0;
+#content{width: 800px;
+     margin: 0 auto;
+	/*margin: 30px 0;
 	background: white;
 	padding: 20px;
 	clear: both;
-}
+}*/
 #footer{
 	border-bottom: 1px #ccc solid;
 	margin-bottom: 10px;
