--- a/style.css
+++ b/style.css
@@ -62,13 +62,12 @@ body{
 			}
 			#nav ul li a:active{ background-color: #ff8f00; }
 
-#content{width: 800px;
-     margin: 0 auto;
-	/*margin: 30px 0;
+#content{}
+	margin: 30px 0;
 	background: white;
 	padding: 20px;
 	clear: both;
-}*/
+}
 
 #canvas {border: 2px solid red
 }
