--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body{
 			}
 			#nav ul li a:active{ background-color: #ff8f00; }
 
-#content{}
+#content{
 	margin: 30px 0;
 	background: white;
 	padding: 20px;
