--- a/style.css
+++ b/style.css
@@ -69,8 +69,7 @@ body{
 	clear: both;
 }
 
-#canvas {border: 2px solid red;
-}
+#canvas {border: 10px solid red}
 
 #footer{
 	border-bottom: 1px #ccc solid;
