--- a/transitions.css
+++ b/transitions.css
@@ -1,34 +1,17 @@
-.parent { width: 350px; height:150px;}
 .box {
-    width: 10px;
-    height: 10px;
-    background-color: black;
-    font-size: 20px;
-    left: 10px;
-    top: 10px;
-    position:absolute;
-    -webkit-transition-property: width height background-color font-size left top transform -webkit-transform color;
-    -webkit-transition-duration: 0.5s;
-    -webkit-transition-timing-function: ease-in-out;
-    transition-property: width height background-color font-size left top transform -webkit-transform color;
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in-out;
+  width: 150px;
+  height: 150px;
+  background: red;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transition: background-color 2s ease-out;
+  -moz-transition: background-color 2s ease-out;
+  -o-transition: background-color 2s ease-out;
+  transition: background-color 2s ease-out;
 }
-.box1{
-    transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    width: 100px;
-    height: 100px;
-    background-color: green;
-    color: white;
-    font-size: 40px;
-    left: 250px;
-    top: 40px;
-    position: absolute;
-    -webkit-transition-property: width height background-color font-size left top transform -webkit-transform color;
-    -webkit-transition-duration: 0.5s;
-    -webkit-transition-timing-function: ease-in-out;
-    transition-property: width height background-color font-size left top transform -webkit-transformv color;
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in-out;
+
+.box:hover {
+  background-color: green;
+  cursor: pointer;
 }
