--- a/transitions.css
+++ b/transitions.css
@@ -1,4 +1,4 @@
-.box {
+/*.box {
   width: 250px;
   height: 250px;
   background: red;
@@ -14,4 +14,24 @@
 .box:hover {
   background-color: blue;
   cursor: pointer;
+}*/
+
+#cf {
+  position:relative;
+  height:281px;
+  width:450px;
+  margin:0 auto;
+}
+
+#cf img {
+  position:absolute;
+  left:0;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+
+#cf img.top:hover {
+  opacity:0;
 }
