--- a/style.css
+++ b/style.css
@@ -69,6 +69,13 @@ body{
 	clear: both;
 }
 
+.content{
+	margin: 30px 0;
+	background: white;
+	padding: 20px;
+	clear: both;
+}
+
 #canvas {border: 10px solid red}
 
 #footer{
