--- a/style.css
+++ b/style.css
@@ -64,12 +64,10 @@ body{
 
 #content{
 	margin: 30px 0;
-	background: #20658d;
+	background: blue;
 	padding: 20px;
 	clear: both;
 }
-
-
 
 #canvas {border: 10px solid red}
 
