--- a/cssjs.css
+++ b/cssjs.css
@@ -36,7 +36,8 @@
     background-color: none;
     border: 1px solid black;
     left: 50px;
-    position: absolute;
+   /* position: absolute;*/
+   position: center;
     top: 50px;
     border-radius: 50%;
 }
