--- a/cssjs.css
+++ b/cssjs.css
@@ -1,14 +1,4 @@
 
-.rudy {
-    background-color: green;
-    text-align: center;
-
-}
-
-#bebet{
-    justify-content: center;
-}
-
 .raindrop {
     background:center blue;
     width:50px;
@@ -37,12 +27,8 @@
     border: 1px solid black;
     left: 50px;
     position: absolute;
-   /* margin: auto;
-    width: 60%;
-    border: 3px solid #73AD21;
-    padding: 10px;
     top: 50px;
-    border-radius: 50%;*/
+    border-radius: 50%;
 }
 .rotate {
     width: 100%;
