--- a/cssjs.css
+++ b/cssjs.css
@@ -1,74 +1,101 @@
-
-.raindrop {
-    background:center blue;
-    width:50px;
-    height:50px;
-    border-radius: 100%;
-    border-top-left-radius: 0;
-    position: absolute;
-    margin: auto;    
-    left: 75px;
-    top: 75px;
-    animation: ccircle 5s infinite linear;
-    -webkit-animation: ccircle 5s infinite linear;
+body {
+  background-color:black;
+  margin: 0;
+  padding: 0;
+  font-family: Signika Negative, sans-serif;
+  font-weight: 300;
 }
-
-.raindrop:hover {
-    animation: none;
-    -webkit-animation: none;
-    
+html, body {
+  height: 100%;
 }
-
-.axis {
-    width: 200px;
-    height: 200px;
-    transform: scaleX(2);
-    background-color: none;
-    border: 1px solid black;
-    left: 50px;
-    position: center;
-    top: 50px;
-    border-radius: 50%;
+#demo {
+  display:table;
+  width:100%;
+  height:100%;
 }
-.rotate {
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    animation: circle 5s infinite linear;
-    -webkit-animation: circle 5s infinite linear;
-    transform-origin: 50% 50%;
-    -webkit-transform-origin: 50% 50%;
-    position: absolute;
+#field {
+  position:relative;
+  display:table-cell;
+  height: 100%;
+    overflow:hidden;
+  text-align: center;
+  vertical-align: middle;
 }
-.counterrotate {
-    width: 50px;
-    height: 50px;
-    animation: ccircle 5s infinite linear;
-    -webkit-animation: ccircle 5s infinite linear;
+#box {
+  color: black;
+  font-size:24px;
+  padding: 10px 16px;
+  border: 2px solid black;
+  background: #9af600;
+  background: linear-gradient(to bottom, #9af600 0%,#71B200 100%);
+  display:inline-block;
+  border-radius: 10px;
 }
-.planet {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    border-radius : 50px;
-    left: 0px;
-    top: 0px;
-    background-color: red;
-    display: block;
+#field p {
+  position: absolute;
+  color: #999;
+  top: 0px;
+  padding: 0px 20px;
+  text-align: left;
+  z-index: -1000;
 }
-@keyframes circle {
-    from {   transform: rotateZ(0deg)    }
-    to {        transform: rotateZ(360deg)    }
+#controls {
+  position:absolute;
+  color: #999;
+  width: 100%;
+  bottom: 20px;
+  text-align: center;
 }
-@-webkit-keyframes circle {
-    0% {   -webkit-transform: rotateZ(0deg)    }
-    100% {        -webkit-transform: rotateZ(360deg)    }
+button {
+  margin: 2px;
+body {
+  background-color:black;
+  margin: 0;
+  padding: 0;
+  font-family: Signika Negative, sans-serif;
+  font-weight: 300;
 }
-@keyframes ccircle {
-    from {        transform: rotateZ(360deg)    }
-    to {        transform: rotateZ(0deg)    }
+html, body {
+  height: 100%;
 }
-@-webkit-keyframes ccircle {
-    from { -webkit-transform: rotateZ(360deg) }
-    to   { -webkit-transform: rotateZ(0deg)   }
+#demo {
+  display:table;
+  width:100%;
+  height:100%;
+}
+#field {
+  position:relative;
+  display:table-cell;
+  height: 100%;
+    overflow:hidden;
+  text-align: center;
+  vertical-align: middle;
+}
+#box {
+  color: black;
+  font-size:24px;
+  padding: 10px 16px;
+  border: 2px solid black;
+  background: #9af600;
+  background: linear-gradient(to bottom, #9af600 0%,#71B200 100%);
+  display:inline-block;
+  border-radius: 10px;
+}
+#field p {
+  position: absolute;
+  color: #999;
+  top: 0px;
+  padding: 0px 20px;
+  text-align: left;
+  z-index: -1000;
+}
+#controls {
+  position:absolute;
+  color: #999;
+  width: 100%;
+  bottom: 20px;
+  text-align: center;
+}
+button {
+  margin: 2px;
 }
