--- a/cssjs.css
+++ b/cssjs.css
@@ -1,101 +1,17 @@
-body {
-  background-color:black;
-  margin: 0;
-  padding: 0;
-  font-family: Signika Negative, sans-serif;
-  font-weight: 300;
+.zoomPic {
+  margin: 30px;
+  width: 300px;
+  height: 180px;
+  background-image: url(https://i.stack.imgur.com/7f3er.jpg);
+  background-repeat:no-repeat;
+  background-position:50% 50%;
+  
+  -webkit-transition: all 10s ease-in-out;
+  -moz-transition: all 10s ease-in-out;
+  -ms-transition: all 10s ease-in-out;
+  -o-transition: all 10s ease-in-out;
+  transition: all 10s ease-in-out;
 }
-html, body {
-  height: 100%;
-}
-#demo {
-  display:table;
-  width:100%;
-  height:100%;
-}
-#field {
-  position:relative;
-  display:table-cell;
-  height: 100%;
-    overflow:hidden;
-  text-align: center;
-  vertical-align: middle;
-}
-#box {
-  color: black;
-  font-size:24px;
-  padding: 10px 16px;
-  border: 2px solid black;
-  background: #9af600;
-  background: linear-gradient(to bottom, #9af600 0%,#71B200 100%);
-  display:inline-block;
-  border-radius: 10px;
-}
-#field p {
-  position: absolute;
-  color: #999;
-  top: 0px;
-  padding: 0px 20px;
-  text-align: left;
-  z-index: -1000;
-}
-#controls {
-  position:absolute;
-  color: #999;
-  width: 100%;
-  bottom: 20px;
-  text-align: center;
-}
-button {
-  margin: 2px;
-body {
-  background-color:black;
-  margin: 0;
-  padding: 0;
-  font-family: Signika Negative, sans-serif;
-  font-weight: 300;
-}
-html, body {
-  height: 100%;
-}
-#demo {
-  display:table;
-  width:100%;
-  height:100%;
-}
-#field {
-  position:relative;
-  display:table-cell;
-  height: 100%;
-    overflow:hidden;
-  text-align: center;
-  vertical-align: middle;
-}
-#box {
-  color: black;
-  font-size:24px;
-  padding: 10px 16px;
-  border: 2px solid black;
-  background: #9af600;
-  background: linear-gradient(to bottom, #9af600 0%,#71B200 100%);
-  display:inline-block;
-  border-radius: 10px;
-}
-#field p {
-  position: absolute;
-  color: #999;
-  top: 0px;
-  padding: 0px 20px;
-  text-align: left;
-  z-index: -1000;
-}
-#controls {
-  position:absolute;
-  color: #999;
-  width: 100%;
-  bottom: 20px;
-  text-align: center;
-}
-button {
-  margin: 2px;
+.zoomPic.zoom {
+  background-size: 1200px 720px !important; 
 }
