--- a/cssjs.css
+++ b/cssjs.css
@@ -2,7 +2,7 @@
   margin: 30px;
   width: 300px;
   height: 180px;
-  background-image: url(https://i.stack.imgur.com/7f3er.jpg);
+  background-image: train.jpg;
   background-repeat:no-repeat;
   background-position:50% 50%;
   
