--- a/cssjs.css
+++ b/cssjs.css
@@ -1,8 +1,5 @@
 body{
-  background-color: black;
-}
-h1{
-  text-decoration-color: white;
+  background-color: #d8bcbc;
 }
 .zoomPic {
   margin: 30px;
