--- a/cssjs.css
+++ b/cssjs.css
@@ -5,7 +5,7 @@ body{
   margin: 30px;
   width: 300px;
   height: 180px;
-  background-image: url("train.jpg");
+  background-image: url('train.jpg');
   background-repeat:no-repeat;
   background-position:50% 50%;
   
