--- a/topic5.css
+++ b/topic5.css
@@ -11,7 +11,7 @@ form {
    /* padding-top: .0rem;
     padding-bottom: .0rem;*/
    /* max-width: 100%;*/
-    background-image: url("https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569_960_720.jpg");
+    background-image: url("http://stash.rachelnabors.com/img/codepen/tuna_sprite.png");
 }
 
 fieldset {
