--- a/topic5.css
+++ b/topic5.css
@@ -6,6 +6,16 @@ body {
     background-color: grey;
 }
 
+.tuna {
+  /* steps causes the animation to chunk into 12 equal pieces */
+  animation: walk-cycle 10s steps(12) infinite;
+  background: url(http://stash.rachelnabors.com/img/codepen/tuna_sprite.png) 0 0 no-repeat; 
+  height: 200px;
+  width: 400px;
+  margin: 100px auto 0;
+}
+
+
 form {
     /*margin: 0;*/
    /* padding-top: .0rem;
