--- a/topic5.css
+++ b/topic5.css
@@ -10,7 +10,7 @@ body {
 
 form {
    
-    background-image: url("http://stash.rachelnabors.com/img/codepen/tuna_sprite.png") 0 0 no-repeat; 
+    background-image: url("http://stash.rachelnabors.com/img/codepen/tuna_sprite.png"); 
 }
 
 fieldset {
